--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@types/bootstrap": "^5.2.5",
+    "bootstrap": "^5.2.2",
     "next": "latest",
     "node-fetch": "^2.6.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.6",
     "tailwind-scrollbar-hide": "^1.1.7"
