--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@react-navigation/native-stack": "^6.9.1",
     "@types/bootstrap": "^5.2.5",
     "bootstrap": "^5.2.2",
+    "firebase": "^9.12.1",
     "next": "latest",
     "node-fetch": "^2.6.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.37.0",
+    "react-player": "^2.11.0",
     "recoil": "^0.7.6",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
@@ -27,8 +30,15 @@
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "autoprefixer": "^10.4.12",
-    "eslint": "8.25.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.4"
