--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.37.0",
+    "react-icons": "^4.6.0",
     "react-player": "^2.11.0",
     "recoil": "^0.7.6",
     "tailwind-scrollbar-hide": "^1.1.7"
