--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-hook-form": "^7.37.0",
     "react-icons": "^4.6.0",
     "react-player": "^2.11.0",
+    "react-select": "^5.5.4",
+    "react-select-search": "^4.1.2",
     "recoil": "^0.7.6",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
